修复代码规约问题